# data-analysis-app

./: README.md  package-lock.json  package.json
_bmad-output/planning-artifacts/: architecture.md  prd.md  product-brief-data-analysis-app-2026-02-27.md
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/_memory/: config.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
server/: index.js
src/app/: page.tsx
src/components/analysis/: FileUploader.tsx  RemoteCursors.tsx  SignalList.tsx
src/components/renderer/: WaveformView.tsx
src/lib/collaboration/: socket.ts
src/lib/parsers/: blf-js-parser.ts  table-parser.ts
src/lib/storage/: index.ts
src/lib/utils/: benchmark.ts  export.ts
src/lib/vctm/: engine.ts
src/lib/workers/: parser.worker.ts
src/store/: index.ts
src/store/slices/: collaborationSlice.ts  vctmSlice.ts
test-data/: BYD_EXP1.blf  high_density_1000hz.csv  test_signals.csv  user_mimic_data.csv
wasm-parser/: Cargo.toml
wasm-parser/src/: lib.rs
