[package]
name = "wasm-parser"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm_bindgen = "0.4"
js-sys = "0.3"
flate2 = "1.0"
chrono = "0.4"
byteorder = "1.4"

[profile.release]
# Optimize for small WASM size
opt-level = "s"
lto = true
